# xq-harness

./: .gitignore  AGENTS.md  CATALOGUE.md  CLAUDE.md  Makefile  README.md  design-qa.md  harness.db  modules.yaml
.github/: CODEOWNERS
.github/workflows/: cd-xq-common-kit.yml  cd-xq-domain-test-mcp.yml  cd-xq-ios-ui-test-framework.yml  cd-xq-scripts.yml  cd-xq-test-harness.yml  cd-xq-test-infra.yml  cd-xq-test-utils.yml  ci-validate-registry.yml  ci-xq-common-kit.yml  ci-xq-domain-test-mcp.yml  ci-xq-ios-ui-test-framework.yml  ci-xq-test-harness-e2e-consumer.yml  ci-xq-test-harness.yml  ci-xq-test-infra.yml  ci-xq-test-utils.yml  ci.yml  harness-state-release.yml  module-cd-github-packages.yml  module-cd-tarball.yml  module-ci-node.yml  module-ci-python.yml  publish-xq-packages.yml  release-xq-scripts.yml  (+1 more)
docs/: MIGRATION_XQ_TOOLBOX.md  README.md  TEST_MATRIX.md  github-actions.md  harness-state-cli-implementation-plan.md  harness-state-cli-release-strategy.md
docs/templates/python-basedpyright-module/: README.md  pyproject.toml
docs/templates/python-basedpyright-module/src/python_basedpyright_example/: __init__.py
docs/templates/python-basedpyright-module/tests/: test_import.py
modules/: tsconfig.base.json
modules/harness-state/: README.md  pyproject.toml
modules/harness-state/scripts/: build_release_artifacts.py  smoke_test_installed_cli.py  validate_release_tag.py
modules/harness-state/skills/harness-state/: SKILL.md
modules/harness-state/src/harness_state/: __init__.py  cli.py  config.py  db.py  errors.py  events.py  export.py  git_context.py  ids.py  projections.py  render.py  schema.py
modules/harness-state/tests/: test_cli.py  test_decisions.py  test_events.py  test_export.py  test_init.py  test_rebuild.py  test_requirements.py  test_tasks.py
modules/python-example/: pyproject.toml
modules/python-example/src/python_example/: __init__.py
modules/python-example/tests/: test_smoke.py
modules/xq-domain-test-mcp/: .yarnrc.yml  README.md  package.json  pyproject.toml  tsconfig.json  tsconfig.test.json
modules/xq-domain-test-mcp/skills/xq-domain-test-mcp/: SKILL.md
modules/xq-domain-test-mcp/src/: index.ts
modules/xq-domain-test-mcp/src/mcp/: stdio-server.ts
modules/xq-domain-test-mcp/src/rest/: rest-client.ts
modules/xq-domain-test-mcp/src/runtime/: runtime-state.ts
modules/xq-domain-test-mcp/src/tools/: index.ts  mcp-tool.ts  rest-api.ts  runtime-config.ts  tool-registry.ts
modules/xq-domain-test-mcp/src/xq_mcp/: __init__.py  runtime.py  server.py  tools.py
modules/xq-domain-test-mcp/src/xq_mcp/tools/: __init__.py  rest_api.py  runtime_config.py
modules/xq-domain-test-mcp/test/: mcp-client-smoke.test.ts  rest-api.test.ts  runtime-config.test.ts  server.test.ts  testbed-scenario.test.ts
modules/xq-domain-test-mcp/test/testbed/: mock-learning-api.ts
modules/xq-domain-test-mcp/testbed/: README.md  __init__.py  api-catalog.json  xq-config.json
modules/xq-domain-test-mcp/testbed/mappings/: create-exercises.json
modules/xq-domain-test-mcp/testbed/mock-api/: server.mjs
modules/xq-domain-test-mcp/testbed/mock_api/: server.py
modules/xq-domain-test-mcp/testbed/scenarios/: create-exercises.md
modules/xq-domain-test-mcp/tests/: test_rest_api.py  test_runtime_config.py  test_server.py  test_tools.py
modules/xq-domain-test-mcp/tests/e2e/: conftest.py  runner.py  test_scenarios.py
scripts/: README.md  check-module-deps.js  check-xq-version-changes.js  module
(+173 files in other folders)
