[project]
name = "python-example"
version = "0.1.0"
description = "Example Python module for xq-harness polyglot monorepo"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
  "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/python_example"]

[tool.pytest.ini_options]
testpaths = ["tests"]
