[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xq-domain-test-mcp"
version = "0.1.0"
description = "MCP server exposing REST API test tools for XQ E2E API scenarios"
requires-python = ">=3.12"
dependencies = [
  "mcp[cli]>=1.0",
]

[project.scripts]
xq-domain-test-mcp = "xq_mcp.server:main"

[dependency-groups]
dev = [
  "pytest>=8.0",
]

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/xq_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
